--- a/app/src/main/res/layout/app_bar_principal.xml
+++ b/app/src/main/res/layout/app_bar_principal.xml
@@ -16,7 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.Sem08.PopupOverlay" />
+            app:popupTheme="@style/Theme.Sem08.PopupOverlay"
+            app:subtitleTextColor="#FFFFFF"
+            app:titleTextColor="#F6F6F6" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
