--- a/app/src/main/res/menu/principal.xml
+++ b/app/src/main/res/menu/principal.xml
@@ -5,5 +5,6 @@
         android:id="@+id/action_logout"
         android:icon="@drawable/ic_baseline_logout_24"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:title="TODO" />
 </menu>
